SVN
  * Restructured models and views to be more efficient
  * Added a submit request view
  * Added a scheduled packages tab to the result view
  * Resulting package binaries can be viewed and downloaded
  * Projects can be added to and removed from the watchlist by right-clicking
    them in the project list
  * Rebuilds can now be triggered directly in the result view by right clicking
    on the package, or a specific result
  * Can now view running build logs in the worker tab
  * Worker jobs running for longer than 1 hour are colour-coded like in the
    webclient
  * Added filter options for worker lists

0.7 - Mar 13 2008
  * Views can be exported to text files. Patch from Michal Vyskocil
    <mvyskocil@suse.cz>
  * Added a worker status tab

0.6 - Mar 07 2008
  * Window size persistence
  * Project selection persistence
  * Configurable autoscroll for finished build logs

0.5 - Mar 06 2008
  * Go directly to build log if an appropriate status is clicked in the All
    tab
  * Show details for blocked and building packages in the package info view

0.4 - Mar 05 2008
  * Incremental package search
  * Build target filtering

0.3 - Mar 04 2008
  * API calls are now made in threads to avoid blocking the UI
  * Status codes in the "All" tab are now colorised, thanks to a patch from 
    Dirk Mueller

0.2 - Feb 28 2008
  * The "All" tab now shows results for all project targets
  * The views now use more flexible custom data models
  * The code size has actually decreased by 30%

0.1 - Feb 28 2008
  * Initial release
